# ai-oncall

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  env  env.example  pyproject.toml  test_output.txt
config/: flow.yaml
config/workflows/: incident_response.yaml  knowledge_base.yaml  support_request.yaml
docs/: 01-getting-started.md  01-project-overview.md  02-architecture-and-tech.md  02-architecture-overview.md  03-knowledge-base-search.md  03-technology-stack.md  README.md  future-enhancements.md  langchain-integration.md  short-docs.md
docs/phases/: phase-1-foundation.md
knowledge-base/: adding _webhook _for _slack.md  query_to_find_the_best_student.md
src/: main.py
src/ai/: __init__.py  langchain_client.py  openai_client.py
src/channels/: base.py  channel_interface.py  slack_adapter.py  teams_adapter.py
src/core/: message_processor.py
src/data/: models.py
src/knowledge/: __init__.py  kb_manager.py  langchain_kb_manager.py
src/utils/: config.py  logging.py
src/workflows/: __init__.py  knowledge_base_workflow.py  langgraph_engine.py
tests/: conftest.py
tests/integration/: test_api_process_message.py  test_consolidated.py  test_health.py  test_message_flow.py  test_process_message_api.py  test_slack_process_message.py  test_teams_process_message.py
tests/unit/: test_ai_client.py  test_channel_adapter.py  test_config.py  test_kb_manager.py  test_main.py  test_message_processor.py  test_models.py  test_openai_client.py  test_workflow_engine.py
