[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ai-oncall-bot"
version = "0.1.0"
description = "Multi-channel AI assistant for support and workflow automation"
authors = ["Your Team <team@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
openai = ">=1.12.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.0.0"
pyyaml = "^6.0.1"
structlog = "^23.2.0"
python-dotenv = "^1.0.0"
slack-bolt = "^1.18.0"
slack-sdk = "^3.25.0"
chromadb = "0.4.18"
numpy = "^1.26.0"
aiohttp = "^3.12.13"
langchain = ">=0.1.12"
langchain-community = ">=0.0.26"
langchain-core = ">=0.1.30"
langchain-openai = ">=0.0.10"
langchain-experimental = ">=0.0.55"
typing-inspect = ">=0.9.0"
typing-extensions = ">=4.10.0"
langgraph = ">=0.0.26"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"
isort = "^5.12.0"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing --cov-fail-under=60"
asyncio_mode = "auto"